# MyNDK

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/georgeren/myndk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/georgeren/myndk/: Cryptor.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/georgeren/myndk/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
useso/: build.gradle
useso/src/androidTest/java/com/georgeren/useso/: ExampleInstrumentedTest.java
useso/src/main/: AndroidManifest.xml
useso/src/main/java/com/georgeren/useso/: MainActivity.java
useso/src/main/res/layout/: activity_main.xml
useso/src/main/res/values/: strings.xml
useso/src/test/java/com/georgeren/useso/: ExampleUnitTest.java
